<resources>
    <string name="app_name">Gensys Music</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="adjust_the_appearance_of_the_application">Adjust the appearance of the application</string>
    <string name="media_settings">Media Settings</string>
    <string name="filters_playback_speed_and_other_settings">Filters, playback speed and other settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="change_how_items_should_be_displayed">Change how items should be displayed</string>
    <string name="customise_player">Customise Player</string>
    <string name="adjust_how_the_player_looks_and_feels">Adjust how the player looks and feels</string>
    <string name="boost_the_loudness_of_your_audio_playback">Boost the loudness of your audio playback</string>
    <string name="feedback">Feedback</string>
    <string name="give_us_a_rating">Give us a rating</string>
    <string name="equalizer">Equalizer</string>
    <string name="adjust_the_equalizer_settings">Adjust the equalizer settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="album_art">Album Art</string>
    <string name="back_button">back button</string>
    <string name="more">More</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">All Songs</string>
    <string name="search">Search</string>
    <string name="sort">Sort By</string>
    <string name="music">Music</string>
    <string name="edit">edit</string>
    <string name="add">add</string>
    <string name="add_cover_image">Add Cover Image</string>
    <string name="playlist_name">Playlist name</string>
    <string name="save">Save</string>
    <string name="no_title_error_msg">Error: No Title Found</string>
    <string name="permission_error">Permission Error</string>
    <string name="permission_error_message">\"The application needs your permission to read your music content. Without access to your files then the application will not function properly.\"</string>
    <string name="close">Close</string>
    <string name="shuffle">shuffle</string>
    <string name="genesis">Gensys</string>
    <string name="enjoy_your_music">Enjoy your music</string>
    <string name="behaviour">Behaviour</string>
    <string name="no_content">No Content</string>
    <string name="related">Related</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlists_require_names_give_your_playlist_a_name">Playlists require names, give your playlist a name</string>
    <string name="update_playlist">Update Playlist</string>
    <string name="update">Update</string>
    <string name="update_successful">Update was successful</string>
    <string name="update_failed">Update was failed</string>
    <string name="update_your_playlist_information">Update your playlist information</string>
    <string name="search_here">Search here</string>
    <string name="delete">Delete</string>
    <string name="play_now">Play Now</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="info">Info</string>
    <string name="modify">Modify</string>
    <string name="share">Share</string>
    <string name="view_album">View Album</string>
    <string name="view_artist">View Artist</string>
    <string name="title">Title</string>
    <string name="artist_songs">Artist Songs</string>
    <string name="album_songs">Album Songs</string>
    <string name="null_values">Error: Please enter full details</string>
    <string name="refresh">Refresh</string>
    <string name="title_asc">Title Ascending</string>
    <string name="title_desc">Title Descending</string>
    <string name="date_asc">Date Ascending</string>
    <string name="date_desc">Date Descending</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="clear_all_playlist">Clear All Playlist</string>
    <string name="clear_all">Clear All</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow System</string>
    <string name="theme_note">Theme setting will take effect when the application restarts</string>
    <string name="filter">Category</string>
    <string name="duration_sec">Duration (sec)</string>
    <string name="_0">0</string>
    <string name="_120">120</string>
    <string name="_60">60</string>
    <string name="reload">Reload content when you are done</string>
    <string name="play">Play</string>
    <string name="queue">Queue</string>
    <string name="minimise">Minimise</string>
    <string name="_44hz">44Hz</string>
    <string name="frequency">Frequency</string>
    <string name="_48hz">48Hz</string>
    <string name="background_image">Background Image</string>
    <string name="volume">Volume</string>
    <string name="adjust_the_system_volume">Adjust the system volume</string>
    <string name="column_count">Column Count</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="play_history">Play History</string>
    <string name="top_50_songs">Most Played Songs - Top 50</string>
    <string name="play_count">Play Count</string>
    <string name="last_played">Last Played</string>
    <string name="song_statistics">Song Statistics</string>
    <string name="available_on_device">Available on device</string>
    <string name="last_played_on">Last played on</string>
    <string name="duration">Duration</string>
    <string name="set_custom_background">set custom background</string>
    <string name="_00_00">00:00</string>
    <string name="application_background">Application Background</string>
    <string name="background_type">Background Type</string>
    <string name="none">None</string>
    <string name="adaptive">Adaptive</string>
    <string name="custom">Custom</string>
    <string name="play_all">PLAY ALL</string>
    <string name="_3_column_s">3 Column(s)</string>
    <string name="_2_column_s">2 Column(s)</string>
    <string name="_1_column_s">1 Column(s)</string>
    <string name="local">Local</string>
    <string name="other">Other</string>
    <string name="total">Total:</string>
    <string name="blur_image">Blur Image</string>
    <string name="now_playing">Now Playing</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="tracks">Tracks</string>
    <string name="artist_tracks">Artist Tracks</string>
    <string name="playlist_songs">Playlist Songs</string>
    <string name="dee">Dee</string>
    <string name="zer">zer</string>
    <string name="top_songs_on_deezer">Top 100 on deezer</string>
    <string name="online">Online</string>
    <string name="deezer">Deezer</string>
    <string name="explicit">Explicit</string>
    <string name="preview_duration">30s</string>
    <string name="chart_songs">Top Songs</string>
    <string name="chart_album">Top Albums</string>
    <string name="chart_artist">Top Artists</string>
    <string name="deezer_song">songs</string>
    <string name="deezer_albums">Albums</string>
    <string name="deezer_artists">Artists</string>
    <string name="preview">Preview</string>
    <string name="want_the_full_song">Want the full song?</string>
    <string name="get_deezer">Get Deezer</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="search_results">Search Results</string>
    <string name="top_songs">Top Songs</string>
    <string name="skip_next">Skip Next</string>
    <string name="skip_prev">Skip Prev</string>
    <string name="next_item">Next Item</string>
    <string name="adaptive_image">Adaptive Image</string>
    <string name="adaptive_image_blurred">Adaptive Image Blurred</string>
    <string name="gif">Gif</string>
    <string name="player_background">Player Background</string>
    <string name="volume_settings">Volume Settings</string>
    <string name="preeq_gain">Pre Eq Gain</string>
    <string name="compressor">Compressor</string>
    <string name="posteq_gain">Post Eq Gain</string>
    <string name="limiter">Limiter</string>
    <string name="enable_audio_fx">Enable Audio Fx</string>
    <string name="extra_volume">Extra Volume</string>
    <string name="audio_filter">Audio Filter</string>
    <string name="_15">15</string>
    <string-array name="column_options">
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>