<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="none">
        <item android:title="@string/online">
            <menu>
                <item
                    android:id="@+id/deezerFragment"
                    android:title="@string/deezer"
                    android:icon="@drawable/ic_deezer"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none" >
        <item android:title="@string/local">
            <menu >
                <item
                    android:id="@+id/songsFragment"
                    android:icon="@drawable/ic_musical_notes"
                    android:title="@string/songs" />
                <item
                    android:id="@+id/albumsFragment"
                    android:icon="@drawable/ic_music_record"
                    android:title="@string/albums" />
                <item
                    android:id="@+id/artistFragment"
                    android:icon="@drawable/ic_user"
                    android:title="@string/artists" />
                <item
                    android:id="@+id/playlistFragment"
                    android:icon="@drawable/ic_music_library"
                    android:title="@string/playlists" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:title="@string/other">
            <menu>

                <item android:id="@+id/statisticsFragment"
                    android:icon="@drawable/ic_music_time"
                    android:title="@string/statistics" />

                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_gears"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>