<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        android:actionLayout="@layout/action_layout_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/title_asc"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/titleAsc"
                    android:icon="@drawable/ic_font_size"
                    android:title="@string/title_asc" />
                <item
                    android:id="@+id/titleDesc"
                    android:icon="@drawable/ic_font_size"
                    android:title="@string/title_desc" />
                <item
                    android:id="@+id/dateAsc"
                    android:icon="@drawable/ic_schedule"
                    android:title="@string/date_asc" />
                <item
                    android:id="@+id/dateDesc"
                    android:icon="@drawable/ic_schedule"
                    android:title="@string/date_desc" />
            </group>
        </menu>
    </item>


</menu>