<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/player_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/background_type" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/noneView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/adaptiveImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adaptive_image" />

        <RadioButton
            android:id="@+id/adaptiveBlurr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adaptive_image_blurred" />

        <RadioButton
            android:id="@+id/gif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gif" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="0dp"
        android:text="@string/save" />

</LinearLayout>