<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/deezerSongs"
        android:title="@string/chart_songs"
        android:icon="@drawable/ic_musical_notes"/>
    <item
        android:id="@+id/deezerAlbums"
        android:title="@string/chart_album"
        android:icon="@drawable/ic_music_album_cd"/>
    <item
        android:id="@+id/deezerArists"
        android:title="@string/chart_artist"
        android:icon="@drawable/ic_photo_gallery"/>
    <item
        android:id="@+id/deezerSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>
</menu>