<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/songsFragment">

    <fragment
        android:id="@+id/songsFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.SongsFragment"
        tools:layout="@layout/fragment_songs"
        android:label="@string/songs" >
        <action
            android:id="@+id/action_songsFragment_to_audioOptionsDialog"
            app:destination="@id/audioOptionsDialog"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics">
        <action
            android:id="@+id/action_statisticsFragment_to_statisticsDialog"
            app:destination="@id/statisticsDialog"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.AlbumsFragment"
        android:label="@string/albums"
        tools:layout="@layout/fragment_albums">
        <action
            android:id="@+id/action_albumsFragment_to_viewAlbumFragment2"
            app:destination="@id/viewAlbumFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/artistFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.ArtistFragment"
        android:label="@string/artists"
        tools:layout="@layout/fragment_artists">
        <action
            android:id="@+id/action_artistFragment_to_viewArtistFragment2"
            app:destination="@id/viewArtistFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/editAudioFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.EditAudioFragment"
        android:label="@string/edit_tags"
        tools:layout="@layout/fragment_edit_audio"/>
    <fragment
        android:id="@+id/infoAudioFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.InfoAudioFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_audio_info"/>
    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.PlaylistFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_playlist">
        <action
            android:id="@+id/action_playlistFragment_to_viewPlaylistFragment2"
            app:destination="@id/viewPlaylistFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_playlistFragment_to_updatePlaylistDialog"
            app:destination="@id/updatePlaylistDialog"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/viewAlbumFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.ViewAlbumFragment"
        android:label="@string/album_songs"
        tools:layout="@layout/fragment_view_album">
        <action
            android:id="@+id/action_viewAlbumFragment_to_audioOptionsDialog"
            app:destination="@id/audioOptionsDialog"
            app:launchSingleTop="true"/>
    </fragment>
    <fragment
        android:id="@+id/viewArtistFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.ViewArtistFragment"
        android:label="@string/artist_songs"
        tools:layout="@layout/fragment_artist_view">
        <action
            android:id="@+id/action_viewArtistFragment_to_audioOptionsDialog"
            app:destination="@id/audioOptionsDialog"
            app:launchSingleTop="true"/>
    </fragment>
    <fragment
        android:id="@+id/viewPlaylistFragment"
        android:name="com.lebogang.genesis.ui.fragments.local.ViewPlaylistFragment"
        android:label="@string/playlist_songs"
        tools:layout="@layout/fragment_view_playlist"/>
    <dialog
        android:id="@+id/audioOptionsDialog"
        android:name="com.lebogang.genesis.ui.dialogs.AudioOptionsDialog"
        tools:layout="@layout/dialog_audio_options">
        <action
            android:id="@+id/action_audioOptionsDialog_to_editAudioFragment"
            app:destination="@id/editAudioFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_audioOptionsDialog_to_infoAudioFragment"
            app:destination="@id/infoAudioFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_audioOptionsDialog_to_viewArtistFragment"
            app:destination="@id/viewArtistFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_audioOptionsDialog_to_viewAlbumFragment"
            app:destination="@id/viewAlbumFragment"
            app:launchSingleTop="true" />
    </dialog>
    <dialog
        android:id="@+id/addPlaylistDialog"
        android:name="com.lebogang.genesis.ui.dialogs.AddPlaylistDialog"
        tools:layout="@layout/dialog_add_playlist"/>
    <dialog
        android:id="@+id/selectPlaylistDialog"
        android:name="com.lebogang.genesis.ui.dialogs.SelectPlaylistDialog"
        tools:layout="@layout/item_local_select_playlist"/>
    <dialog
        android:id="@+id/updatePlaylistDialog"
        android:name="com.lebogang.genesis.ui.dialogs.UpdatePlaylistDialog"
        tools:layout="@layout/dialog_update_playlist"/>
    <dialog
        android:id="@+id/statisticsDialog"
        android:name="com.lebogang.genesis.ui.dialogs.StatisticsDialog"
        tools:layout="@layout/dialog_statistic"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.lebogang.genesis.ui.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lebogang.genesis.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
    <dialog
        android:id="@+id/filterDialog"
        android:name="com.lebogang.genesis.ui.dialogs.FilterDialog"
        tools:layout="@layout/dialog_filter"/>
    <dialog
        android:id="@+id/queueDialog"
        android:name="com.lebogang.genesis.ui.dialogs.QueueDialog"
        tools:layout="@layout/dialog_queue"/>
    <dialog
        android:id="@+id/themeDialog"
        android:name="com.lebogang.genesis.ui.dialogs.ThemeDialog"
        tools:layout="@layout/dialog_theme"/>
    <fragment
        android:id="@+id/deezerFragment"
        android:name="com.lebogang.genesis.ui.fragments.deezer.DeezerFragment"
        android:label="@string/online"
        tools:layout="@layout/fragment_deezer"/>
    <fragment
        android:id="@+id/deezerSearchFragment"
        android:name="com.lebogang.genesis.ui.fragments.deezer.DeezerSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_deezer_search"/>
    <dialog
        android:id="@+id/dialogDeezerPreview"
        android:name="com.lebogang.genesis.ui.dialogs.DialogDeezerPreview"
        android:label="DialogDeezerPreview"
        tools:layout="@layout/dialog_deezer_preview"/>
    <fragment
        android:id="@+id/viewAlbumDeezerFragment"
        android:name="com.lebogang.genesis.ui.fragments.deezer.ViewAlbumDeezerFragment"
        android:label="@string/album"
        tools:layout="@layout/fragment_deezer_view_album"/>
    <fragment
        android:id="@+id/viewArtistDeezerFragment"
        android:name="com.lebogang.genesis.ui.fragments.deezer.ViewArtistDeezerFragment"
        android:label="@string/artist"
        tools:layout="@layout/fragment_deezer_view_artist"/>
    <dialog
        android:id="@+id/playerBackgroundDialog"
        android:name="com.lebogang.genesis.ui.dialogs.PlayerBackgroundDialog"
        android:label="PlayerBackgroundDialog"
        tools:layout="@layout/dialog_player_background"/>
    <dialog
        android:id="@+id/audioProcessingDialog"
        android:name="com.lebogang.genesis.ui.dialogs.AudioProcessingDialog"
        android:label="AudioProcessingDialog"
        tools:layout="@layout/dialog_audio_fx"/>

</navigation>